# rndm

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: README.md  summary.csv
benchmarks/counts/: counts_float_-1.0_1.0_p1.csv  counts_float_0.000_0.999_p3.csv  counts_int_-100_50.csv  counts_int_0_10.csv  counts_int_50_1000.csv
src/rndm/: __init__.py  core.py
tests/: test_basic.py
